; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c_db_auth_get_selected.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c_db_auth_get_selected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db_enabled = common dso_local global i32 0, align 4
@db_auth_get_selected.query = internal global i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i32 0, i32 0), align 8
@.str = private unnamed_addr constant [68 x i8] c"select username, token from auth.identity_token where selected = 1;\00", align 1
@db = common dso_local global i32 0, align 4
@SQLITE_ROW = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @db_auth_get_selected(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %14 = load i32, i32* @db_enabled, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %56

17:                                               ; preds = %4
  store i32 0, i32* %10, align 4
  %18 = load i32, i32* @db, align 4
  %19 = load i8*, i8** @db_auth_get_selected.query, align 8
  %20 = call i32 @sqlite3_prepare_v2(i32 %18, i8* %19, i32 -1, i32** %11, i32* null)
  %21 = load i32*, i32** %11, align 8
  %22 = call i64 @sqlite3_step(i32* %21)
  %23 = load i64, i64* @SQLITE_ROW, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %52

25:                                               ; preds = %17
  %26 = load i32*, i32** %11, align 8
  %27 = call i64 @sqlite3_column_text(i32* %26, i32 0)
  %28 = inttoptr i64 %27 to i8*
  store i8* %28, i8** %12, align 8
  %29 = load i32*, i32** %11, align 8
  %30 = call i64 @sqlite3_column_text(i32* %29, i32 1)
  %31 = inttoptr i64 %30 to i8*
  store i8* %31, i8** %13, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = load i8*, i8** %12, align 8
  %34 = load i32, i32* %7, align 4
  %35 = sub nsw i32 %34, 1
  %36 = call i32 @strncpy(i8* %32, i8* %33, i32 %35)
  %37 = load i8*, i8** %6, align 8
  %38 = load i32, i32* %7, align 4
  %39 = sub nsw i32 %38, 1
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i8, i8* %37, i64 %40
  store i8 0, i8* %41, align 1
  %42 = load i8*, i8** %8, align 8
  %43 = load i8*, i8** %13, align 8
  %44 = load i32, i32* %9, align 4
  %45 = sub nsw i32 %44, 1
  %46 = call i32 @strncpy(i8* %42, i8* %43, i32 %45)
  %47 = load i8*, i8** %8, align 8
  %48 = load i32, i32* %9, align 4
  %49 = sub nsw i32 %48, 1
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i8, i8* %47, i64 %50
  store i8 0, i8* %51, align 1
  store i32 1, i32* %10, align 4
  br label %52

52:                                               ; preds = %25, %17
  %53 = load i32*, i32** %11, align 8
  %54 = call i32 @sqlite3_finalize(i32* %53)
  %55 = load i32, i32* %10, align 4
  store i32 %55, i32* %5, align 4
  br label %56

56:                                               ; preds = %52, %16
  %57 = load i32, i32* %5, align 4
  ret i32 %57
}

declare dso_local i32 @sqlite3_prepare_v2(i32, i8*, i32, i32**, i32*) #1

declare dso_local i64 @sqlite3_step(i32*) #1

declare dso_local i64 @sqlite3_column_text(i32*, i32) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i32 @sqlite3_finalize(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
